# tap-workday-raas

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: veracode-cursor-agent-fix.yml  veracode-static-scan.yml
scripts/: probe_oauth_sync_download.py  probe_oauth_token_refresh.py
tap_workday_raas/: __init__.py  client.py  discover.py  oauth_middleware.py  sync.py
tests/unittests/: test_client_stream_oauth.py  test_discovery.py  test_oauth_middleware.py
