[tool.poetry]
name = "tap-workday-raas"
version = "3.0.0"
description = "Singer.io tap for extracting data from Workday RaaS"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = ">=3.9"
backoff = "1.8.0"
certifi = ">=2024.7.4"
idna = "3.7"
ijson = "3.1.4"
ipython = "^8.10.0"
pygments = "^2.15.0"
requests = ">=2.32.4"
setuptools = "^78.1.1"
singer-python = "5.9.0"
urllib3 = "^1.26.20"

[tool.poetry.dev-dependencies]
ipdb = "*"
pylint = "*"
nose = "*"

[tool.poetry.scripts]
tap-workday-raas = "tap_workday_raas:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
